# modorganizer-installer_quick

./: vcpkg.json
.github/workflows/: build.yml
src/: CMakeLists.txt
